<resources>
    <string name="app_name">OpenTAK ICU</string>
    <string name="version">Version: %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="rtsp_streamer">Custom RTSP</string>
    <string name="rtmp_streamer">Custom RTMP</string>
    <string name="default_rtmp">Default RTMP</string>
    <string name="default_rtsp">Default RTSP</string>
    <string name="default_srt">Default SRT</string>
    <string name="from_file_rtsp">From file RTSP</string>
    <string name="from_file_rtmp">From file RTMP</string>
    <string name="surface_mode_rtsp">Surface mode RTSP</string>
    <string name="surface_mode_rtmp">Surface mode RTMP</string>
    <string name="texture_mode_rtsp">Texture mode RTSP</string>
    <string name="texture_mode_rtmp">Texture mode RTMP</string>
    <string name="display_rtmp">Display RTMP or RTSP</string>
    <string name="opengl_rtmp">OpenGl RTMP</string>
    <string name="opengl_rtsp">OpenGl RTSP</string>
    <string name="opengl_srt">OpenGl SRT</string>
    <string name="opengl_generic">OpenGl Generic</string>
    <string name="service_rtp">Service RTP</string>
    <string name="cube_test_rtmp">Cube test RTMP</string>
    <string name="rotation_rtmp">Rotation RTMP</string>
    <string name="tv_select">Select your streamer</string>
    <string name="hint_rtsp">rtsp://yourendpoint</string>
    <string name="hint_rtmp">rtmp://yourendpoint</string>
    <string name="hint_srt">srt://yourendpoint</string>
    <string name="start_button">Start stream</string>
    <string name="stop_button">Stop stream</string>
    <string name="switch_camera_button">Switch camera</string>
    <string name="select_file">Select file</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
    <string name="resync_file">ReSync file</string>
    <string name="microphone">Microphone</string>
    <string name="filters">Filters</string>
    <string name="clear">Clear</string>
    <string name="drawer_title">Options</string>
    <string name="protocols">Protocol</string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="resolution">Resolution</string>
    <string name="video_bitrate">Bitrate (on fly)</string>
    <string name="audio_bitrate">Bitrate</string>
    <string name="fps">FPS</string>
    <string name="orientation">Orientation</string>
    <string name="hardware_rotation">Hardware rotation</string>
    <string name="samplerate">SampleRate</string>
    <string name="channel">Channel</string>
    <string name="stereo">Stereo</string>
    <string name="mono">Mono</string>
    <string name="echo_canceler">Echo canceler</string>
    <string name="camera">Camera</string>
    <string name="auth">Auth</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="noise_suppressor">Noise suppressor</string>
    <string name="video_source">Video source</string>
    <string name="audio_source">Audio source</string>
    <string name="camera1">Camera1</string>
    <string name="camera2">Camera2</string>
    <string name="screen">Screen</string>
    <string name="internal">Internal</string>
    <string name="hint_protocol">protocol://yourendpoint</string>
    <string name="welcome_to_open_tak_icu">Welcome to OpenTAK ICU</string>
    <string name="app_intro_welcome_msg">Let\'s get you set up</string>
    <string name="permissions">Permissions</string>
    <string name="permissions_slide_description">Please grant the necessary permissions</string>
    <string name="background_location_permission">Background Location Permission</string>
    <string name="background_location_permissions_slide_description">On the next screen please choose Allow All The Time</string>
    <string name="tak_server">TAK Server</string>
    <string name="server_info">Server Info</string>
    <string name="finished_onboarding">Setup is complete!</string>
    <string name="finished">Finished</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="codec">Codec</string>
    <string name="record_video">Record video to this device</string>
    <string name="stream">Stream video</string>
    <string name="stream_video">Stream video</string>
    <string name="enable_audio">Enable Audio</string>
    <string name="audio_codec">Audio Codec</string>
    <string name="storage_slide_title">Storage Permission</string>
    <string name="storage_slide_description">Please grant storage permission to save recordings</string>
    <string name="certificate_description">The server\'s trust store certificate in PKCS12 format. Required if your server\'s certificate is self-signed</string>
    <string name="test_certificate_description">Tests the certificate and certificate password. You must press this before streaming to a server with a self signed certificate.</string>
    <string name="failed_to_open_cert">Failed to open certificate</string>
    <string name="success">Success</string>
    <string name="choose_cert">Please choose a certificate and provide a password</string>
    <string name="cert_success">The certificate is ready to be used</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="stream_in_progress">Stream in progress</string>
    <string name="start_stream">Start Streaming</string>
    <string name="exit">Exit</string>
    <string name="auth_error">Authentication Error</string>
    <string name="stop_stream">Stop Streaming</string>
    <string name="ready_to_stream">Ready to stream</string>
    <string name="saved_photo">Saved photo</string>
    <string name="saved_photo_failed">Failed to save photo</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="error_preparing_stream">Error preparing screen, choose different audio/video codecs and try again</string>
    <string name="no_location_permissions">Location permission denied, will not send CoTs</string>
    <string name="atak_preferences">TAK Server Preferences</string>
    <string name="send_cots">Send Location CoTs to a TAK server</string>
    <string name="atak_address">TAK Server Address</string>
    <string name="atak_username">TAK Server Username</string>
    <string name="atak_password">TAK Server Password</string>
    <string name="trust_store_cert">Trust Store Certificate</string>
    <string name="trust_store_cert_password">Trust Store Certificate Password</string>
    <string name="client_cert">Client Certificate</string>
    <string name="client_cert_password">Client Certificate Password</string>
    <string name="atak_port">TAK Server Port</string>
    <string name="atak_auth">Enable TAK Server Authentication</string>
    <string name="atak_ssl">Connect to the TAK Server via SSL</string>
    <string name="atak_ssl_summary">Disable for TCP</string>
    <string name="video_preferences">Video Preferences</string>
    <string name="stream_preferences">Streaming Settings</string>
    <string name="audio_preferences">Audio Settings</string>
    <string name="self_signed_cert">Server uses Self-Signed Certificate</string>
    <string name="test_certificates">Test Certificates</string>
    <string name="test_client_cert">Test Client Certificate</string>
    <string name="test_trust_store">Test Trust Store Certificate</string>
    <string name="location_fix">Location Fix</string>
    <string name="stream_path">Stream Path</string>
    <string name="bitrate">Bitrate</string>
    <string name="recording">Recording</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no">No</string>
    <string name="disabled">Disabled</string>
    <string name="yes">Yes</string>
    <string name="network_lost">Network Connectivity Lost</string>
    <string name="not_streaming">Not Streaming</string>
    <string name="multicast">UDP Multicast</string>
    <string name="stream_port">Stream Port</string>
    <string name="stream_address">Stream Address</string>
    <string name="stream_protocol">Stream Protocol</string>
    <string name="stream_tcp_summary">Required if the server is behind a firewall or NAT. Disable for UDP. Only valid if the streaming protocol is RTSP.</string>
    <string name="adaptive_bitrate">Adaptive Bitrate</string>
    <string name="adaptive_bitrate_summary">Changes the bitrate dynamically based on your bandwidth</string>
    <string name="invalid_ip">Invalid IP Address</string>
    <string name="invalid_multicast_ip_message">Invalid Multicast IP Address</string>
    <string name="codec_error">Failed to start stream. Check the video and audio settings and try again. Not all devices support all codecs.</string>
    <string name="self_signed_cert_summary">Only available for RTSPS and RTMPS</string>
    <string name="send_stream_connection_details">Send Stream Connection Details</string>
    <string name="send_stream_connection_details_summary">Broadcasts the stream connection details to other EUDs on the same server. Disable if using OpenTAKServer or viewing video streams on your server requires authentication.</string>
    <string name="usb_width">USB Camera Resolution Width</string>
    <string name="usb_height">USB Camera Resolution Height</string>
    <string name="grey_scale">Grey scale</string>
    <string name="negative">Negative</string>
    <string name="noise">Noise</string>
    <string name="sepia">Sepia</string>
    <string name="no_filter">No filter</string>
    <string name="analog_tv">Analog TV</string>
    <string name="android_view">Android view</string>
    <string name="basic_deformation">Basic deformation</string>
    <string name="beauty">Beauty</string>
    <string name="black">Black</string>
    <string name="blur">Blur</string>
    <string name="brightness">Brightness</string>
    <string name="cartoon">Cartoon</string>
    <string name="chroma">Chroma Key</string>
    <string name="circle">Circle</string>
    <string name="color">Color</string>
    <string name="contrast">Contrast</string>
    <string name="crop">Crop</string>
    <string name="duotone">Duotone</string>
    <string name="earlybird">EarlyBird</string>
    <string name="edge_detection">Edge detection</string>
    <string name="exposure">Exposure</string>
    <string name="fire">Fire</string>
    <string name="gamma">Gamma</string>
    <string name="glitch">Glitch</string>
    <string name="gif">Gif</string>
    <string name="halftone_lines">Halftone lines</string>
    <string name="image">Image</string>
    <string name="image_70s">Image 70s</string>
    <string name="lamoish">Lamoish</string>
    <string name="money">Money</string>
    <string name="pixelated">Pixelated</string>
    <string name="polygonization">Polygonization</string>
    <string name="rgb_saturate">RGB saturate</string>
    <string name="ripple">Ripple</string>
    <string name="rotation">Rotation</string>
    <string name="saturation">Saturation</string>
    <string name="surface_filter">Surface filter</string>
    <string name="rainbow">Rainbow</string>
    <string name="sharpness">Sharpness</string>
    <string name="snow">Snow</string>
    <string name="swirl">Swirl</string>
    <string name="temperature">Temperature</string>
    <string name="text">Text</string>
    <string name="zebra">Zebra</string>
    <string name="camera_uvc">UVC Camera</string>
    <string name="text_overlay">Text Overlay</string>
    <string name="text_overlay_summary">Adds the timestamp and current location info to the video stream</string>
    <string name="import_dialog_title">Import Stream Settings</string>
    <string name="import_dialog_message">Do you want to change the following settings:\n\n</string>
    <string name="btn_import">Import</string>
</resources>