<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Server Settings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="stream_video"
            android:title="@string/stream_video" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/protocols"
            android:entryValues="@array/protocols"
            android:key="protocol"
            android:title="Protocol"
            android:dependency="stream_video"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="multicast"
            android:title="@string/multicast"
            android:dependency="stream_video" />
        <EditTextPreference
            android:defaultValue="example.com"
            android:key="address"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Address"
            app:summary="IP address or domain name of the server"
            android:dependency="stream_video" />
        <EditTextPreference
            android:key="port"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Port"
            app:defaultValue="8554"
            android:dependency="stream_video" />
        <EditTextPreference
            android:key="path"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Path"
            android:dependency="stream_video" />
        <EditTextPreference
            android:key="username"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Username"
            android:dependency="stream_video" />
        <EditTextPreference
            android:key="password"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Password"
            android:dependency="stream_video" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="tcp"
            android:title="Use TCP"
            app:summary="Required if the server is behind a firewall or NAT."
            android:dependency="stream_video" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="self_signed_cert"
            android:title="@string/self_signed_cert"
            app:summary=""
            android:dependency="stream_video" />
        <Preference
            android:key="certificate"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:defaultValue="false"
            android:title="@string/trust_store_cert"
            app:summary="@string/certificate_description"
            android:dependency="self_signed_cert" />
        <EditTextPreference
            android:key="certificate_password"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:defaultValue="atakatak"
            android:title="@string/trust_store_cert_password"
            android:dependency="self_signed_cert" />
        <Preference
            android:key="test_certificate"
            android:title="Test Certificate"
            app:summary="@string/test_certificate_description"
            android:dependency="self_signed_cert" />
    </PreferenceCategory>
</PreferenceScreen>