<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Video Settings">
        <ListPreference
            android:key="resolution"
            android:title="@string/resolution"
            android:entries="@array/bitrates"
            android:entryValues="@array/bitrates">
        </ListPreference>
        <EditTextPreference
            android:defaultValue="1000"
            android:inputType="number"
            android:key="bitrate"
            android:title="Bitrate" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="adaptive_bitrate"
            android:title="Adaptive Bitrate"
            app:summary="Changes the bitrate dynamically based on your bandwidth" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/fps"
            android:entryValues="@array/fps"
            android:key="fps"
            android:title="FPS" />
        <ListPreference
            android:key="codec"
            android:title="@string/codec"
            android:entries="@array/codecs"
            android:entryValues="@array/codecs" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="record"
            android:title="@string/record_video" />
    </PreferenceCategory>
</PreferenceScreen>