<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:id="@+id/activity_custom"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.pedro.library.view.OpenGlView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/openGlView"
            app:aspectRatioMode="adjust"
            app:AAEnabled="false"
            app:numFilters="1"
            app:isFlipHorizontal="false"
            app:isFlipVertical="false"
            />

        <Button
            android:text="@string/start_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/b_record"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/b_start_stop"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textColor"
            />

        <Button
            android:text="@string/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/b_start_stop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/b_record"
            app:layout_constraintEnd_toStartOf="@id/switch_camera"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textColor"
            />

        <Button
            android:text="@string/switch_camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/b_start_stop"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textColor"
            />

        <TextView
            android:textColor="@color/appColor"
            android:id="@+id/tv_bitrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="@id/b_start_stop"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/switchCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="21dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@null"
            app:borderWidth="3dp"
            app:layout_constraintBottom_toTopOf="@id/recordButton"
            app:layout_constraintEnd_toEndOf="@+id/openGlView"
            app:srcCompat="@drawable/ic_switch_camera" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/recordButton"
            app:tint="#FF0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="21dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@null"
            app:borderWidth="3dp"
            app:layout_constraintBottom_toTopOf="@id/settingsButton"
            app:layout_constraintEnd_toEndOf="@+id/openGlView"
            app:srcCompat="@drawable/ic_record" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="21dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="@+id/openGlView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@android:drawable/ic_menu_preferences"
            app:backgroundTint="@null"
            app:borderWidth="3dp"
            tools:layout_editor_absoluteY="581dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>
